--- a/weweweme/1주차.md
+++ b/weweweme/1주차.md
@@ -97,7 +97,7 @@
   - 응답 문구는 사람에게 실행 결과를 알리는 것이 목적이다.
 - 페이지가 문장으로만 되어있다면 전송의 끝이다.
 - 만약 이미지, 비디오 등의 추가 리소스를 포함하고 있다면 이러한 리소스에 대한 태그가 문장안에 들어간다.
-  > 예시로 '<img src="image.jpg">' 는 이미지 파일에 대한 태그이다.
+  > 예시로 ' img src="image.jpg" ' 는 이미지 파일에 대한 태그이다.
 - 브라우저는 이러한 태그를 해석하여 해당 리소스에 대한 추가 HTTP를 서버에 전송하는데 원래의 html 문서와 별도로 "image.jpg" 라는 이미지 파일을 요청하는 새로운 HTTP 리퀘스트가 발생한다.
 - 브라우저는 나누어 받은 리퀘스트가 한 페이지인지 여러 페이지인지 모르며, 단순히 하나의 요청에 대해 하나의 응답만 돌려보낸다.
 - 모든 필요한 리소스가 브라우저에 로딩되면, 브라우저는 이들을 이용하여 웹 페이지를 완성한다.
