DNS 서버 기록 추가

--- a/daepan/1주차.md
+++ b/daepan/1주차.md
@@ -69,10 +69,10 @@ Hyper Text Transfer Protocol의 약어
 
 2. 웹 서버는 Request에 요구사항에 따른 Response 메시지를 반환한다.
 
-리퀘스트 메시지가 웹서버에 도착하면 웹서버는 그 정보를 토대로 URI와 메서드를 통해 동작하고, 응답 메시지를 반환합니다.
+리퀘스트 메시지가 웹서버에 도착하면 웹서버는 그 정보를 토대로 URI와 메서드를 통해 동작하고, 응답 메시지를 반환한다.
 
 여기서 반환과정에서 스테이터스 코드를 반환하게 되는데
-스테이터스상태 코드란? (Status Codes): 서버가 클라이언트의 요청에 대한 응답으로 보내는 숫자 코드. 응답의 성공, 실패, 오류 등의 상태를 나타냅니다.
+스테이터스상태 코드란? (Status Codes): 서버가 클라이언트의 요청에 대한 응답으로 보내는 숫자 코드. 응답의 성공, 실패, 오류 등의 상태를 나타낸다.
 
 * 2xx: 성공
 * 3xx: 리다이렉션
@@ -89,4 +89,66 @@ Hyper Text Transfer Protocol의 약어
 * HEAD: 리소스의 헤더만 요청합니다.
 * OPTIONS: 리소스가 지원하는 통신 옵션을 요청합니다.
 * PATCH: 리소스의 부분적인 수정을 요청합니다.
+
+## IP 주소
+
+기본적으로 브라우저는 URL을 해독하거나 HTTP 메시지를 만들 수 있지만, 메시지를 네트워크에 송출하는 기능은 OS를 통해 송신합니다.
+이때 URL 안에 쓰여있는 서버 도메인 이름을 활용하여 IP 주소를 조사합니다.
+OS에 송신을 의뢰할 때는 도메인명이 아니라 주소로 메시지를 받을 상대를 지정해야 하기 때문이다.
+
+그러다면 이 IP의 기본 개념에 대한 예시이다.
+
+허브에 몇 대의 PC를 연결한 서브넷이라는 단위를 기본으로 생각한다.
+
+이 서브넷을 라우터에 연결하여 점차 트리 여러 서브넷과 같은 허브와 PC로 이루어진 서브넷, 허브와 라우터로 이루어진 서브넷이 형성되고, 이러한 서브넷들을 연결하여 네트워크 전체가 구성된다.
+
+그리고 ㅁㅁ동 ㅁㅁ번지라는 형태의 네트워크의 주소를 할당합니다.
+ㅁㅁ동과 같은 동의 해당하는 것은 서브넷에 할당하고, ㅁㅁ번지등 서브넷에 연결된 각 PC에 고유한 네트워크 번호라 하고, 번지에 해당하는 번호를 호스트 번호, 이 두 주소를 합쳐 IP주소라고 한다.
+
+
+* 서브넷 (Subnet)
+서브넷은 IP 네트워크를 더 작은 단위로 분할한 것입니다. 예를 들어, 큰 기업이 여러 지점을 갖고 있다면, 각 지점은 자체 서브넷을 가질 수 있습니다. 서브넷을 사용하면 IP 주소 공간을 효율적으로 사용하고, 네트워크 관리를 더 간편하게 할 수 있다.
+
+* 서브넷 마스크 (Subnet Mask) / 넷마스크 (Netmask)
+서브넷 마스크는 IP 주소의 어느 부분이 네트워크 주소를 나타내고 어느 부분이 호스트 주소를 나타내는지 구분해주는 값입니다. IPv4 환경에서 서브넷 마스크는 보통 점으로 구분된 4개의 숫자로 표현됩니다.
+
+예: IP 주소가 192.168.1.10이고 서브넷 마스크가 255.255.255.0인 경우, 192.168.1은 네트워크 주소를 나타내고 .10은 해당 네트워크 내의 특정 호스트를 나타낸다.
+
+## DNS를 사용하는 이유
+
+IP 주소는 고유한 번호이고 일일이 번호를 기억하기 어렵다는 단점이 있다.
+그렇다고 해서 서버명을 IP주소 처럼 사용하자니 문자열에 대한 데이터 운반비용이 비대해지는 문제가 있다.
+
+그렇기에 사람은 이름을 사용하고 라우터는 IP 주소를 사용하는 방식을 운용하게 되었는데, 그것이 **DNS**이다.
+
+>DNS (Domain Name System)
+인터넷에서 도메인 이름을 IP 주소로, 또는 IP 주소를 도메인 이름으로 변환해주는 시스템
+
+그렇다면 DNS 서버에 조회과정에 대해 알아보자
+간단하게 생각하면 DNS 서버에 조회메시지를 보내고 거기서 반송되는 응답 메시지를 받는 것이다.
+
+이는 DNS 서버는 클라이언트의 동작으로부터 시작된다는 것을 알 수 있는데, 이 과정에서 리졸버라 불리는 과정이 있다.
+
+DNS 리졸버 (DNS Resolver)는 도메인 이름을 IP 주소로 변환하는 요청을 처리하는 프로세스나 소프트웨어를 지칭한다.
+
+그리고 이 과정을 name resolution이라고 합니다.
+
+### Socket라이브러리 기능, Resolver
+이 리졸버는 Socket 라이브러리에 들어있는 부품화한 프로그램이라고 하는데,
+Socket 라이브러리란, 네트워크의 기능을 호출하기 위한 프로그램의 일부라고 생각하면 좋다.
+
+간단히 말해서 DNS 서버에 요청을 할 때 브라우저는 Socket 라이브러리의 gethostbyname이라는 함수에
+서버명을 넣어서 보내주면 IP 주소의 응답을 받을 수 있다.
+
+자세한 세부동작으로는 HTTP의 리퀘스트 동작과 매우 유사하다.
+1. "~~~"이라는 서버의 IP주소를 알려주세요 라는 요청을 만들어서 DNS서버에 보낸다.
+단, 이 메시지의 동작에서는 리졸버가 스스로 동작하는 것이 아닌 OS 내부의 **프로토콜 스택**을 호출하여 실행을 의뢰한다.
+*(리졸버는 브라우저와 같이 네트워크의 데이터를 송수신하는 기능이 없기 때문)*
+2. 리졸버가 프로토콜 스택을 호출하면 제어가 리졸버에게 넘어가고 여기에서 메시지를 보내는 동작을 진행한다. LAN 어댑터를 타고 DNS 서버로 송신된다.
+3. DNS 서버에서는 요청에 맞는 응답을 클라이언트에 전송합니다. 프로토콜 스택을 경유하여 리졸버에 건네지고 리졸버는 응답을 해석하여 IP 주소를 메모리에 저장합니다.
+
+그렇다면 이 DNS 서버에 메시지를 송신할 때의 DNS 서버의 IP주소는 어떻게 아는가?
+이것은 TCP/IP 설정 항목의 하나하나로 컴퓨터에 미리 설정되어 있으므로 특별히 조사할 것 없이
+컴퓨터 설정에서 확인이 가능하다.
+
 
