--- a/daepan/1주차.md
+++ b/daepan/1주차.md
@@ -3,7 +3,6 @@
 ## 1.1.1 탐험 여행은 URL입력부터 시작된다.
 
 일반적으로 클라이언트 단에서 네트워크 통신이 일어난다고하면, 브라우저에 URL을 입력함으로써 네트워크 통신이 시작된다.
-예를 들어 설명하면 내가 chrome 주소창에 https://www.naver.com을 검색한다고 가정해보자
 
 > URL의 개념 (Uniform Resource Locator) 
 > 정의: 인터넷에서 자원의 위치를 나타내고 어떻게 그것에 접근할 수 있는지를 지정하는 문자열
@@ -91,6 +90,47 @@ Hyper Text Transfer Protocol의 약어
 * HEAD: 리소스의 헤더만 요청합니다.
 * OPTIONS: 리소스가 지원하는 통신 옵션을 요청합니다.
 * PATCH: 리소스의 부분적인 수정을 요청합니다.
+
+## HTTP 리퀘스트 메시지와 응답 메시지
+* HTTP의 메시지는 리퀘스트 라인, 메시지 헤더, 메시지 본문 이 3개로 구성되어 있다.
+
+- 리퀘스트 라인
+메소드 + URI + HTTP 으로 구성되어 있어 대략적인 API 구성을 알 수 있습니다.
+
+- 메시지 헤더
+한 행에서 한 개의 헤더필드를 입력합니다. 
+리퀘스트의 다양한 부가적인 정보를 알 수 있습니다.
+
+- 메시지 본문
+클라이언트에서 서버에 송신하는 데이터이며, POST 메서드 사용의 경우 데이터가 들어가는 부분입니다.
+
+응답 메시지로는 메시지 헤더와 본문은 동일하고 스테이터스 라인이 온다.
+
+- 스테이터스 라인
+HTTP 버전 + 스테이터스 코드 + 응답문구로 구성되어 있다.
+
+- 메시지 헤더
+응답과정에서의 부가적인 정보를 담고 있다.
+
+- 메시지 본문
+서버에서 클라이언트에 송신하는 데이터, 파일에서 읽어들인 데이터와 CGI 애플리케이션이 출력한 데이터가 들어간다.
+메시지 본문은 바이너리 데이터로 취급된다.
+
+> 바이너리 데이터란?
+0과 1의 이진숫자로 표현되는 데이터
+특징으로
+* 비텍스트 데이터: 바이너리 데이터는 텍스트 데이터와 달리, 일반 텍스트 편집기로 직접 읽거나 수정하기 어렵습니다. 이미지, 오디오, 실행 파일, 압축 파일 등의 형태로 주로 활용된다.
+
+* 효율적인 저장: 데이터는 그것의 원래 형태로 직접 저장되므로 종종 바이너리 형식은 텍스트 형식보다 훨씬 효율적이다.
+
+* 손상의 위험: 바이너리 데이터의 경우 잘못된 수정이나 깨진 부분이 있으면 전체 파일이 손상될 위험이 있습니다. 따라서 바이너리 파일을 직접 편집할 때는 주의가 필요하다.
+
+예시:
+이미지 파일 (JPEG, PNG, GIF 등)
+오디오 파일 (MP3, WAV 등)
+비디오 파일 (MP4, AVI 등)
+실행 파일 (EXE, DLL 등)
+압축 파일 (ZIP, RAR 등)
 
 ## IP 주소
 
