--- a/JunghyeonShin/1주차.md
+++ b/JunghyeonShin/1주차.md
@@ -3,7 +3,7 @@
 ### 1 탐험 여행은 URL 입력부터 시작한다
 URL(Uniform Resource Locator)이란 웹 서버에 액세스하는 클라이언트 기능, 파일을 다운로드/업로드 하는 FTP(File Transfer Protocol)의 클라이언트 기능, 메일의 클라이언트 기능 등을 하는 브라우저의 기능 중 중의 어느 것을 사용하여 데이터에 액세스하면 좋을 것인지를 판단하는 재료이다.
 URL을 사용하는 방법은 다양하지만 모든 URL에는 맨 앞에 있는 문자열(http:, ftp:, mailto:, file:)에서 액세스 하는 방법을 나타내는 공통점이 있다.
-<img src="https://drive.google.com/file/d/1p9tLY2gqnsiwkrlmQoEZ_sppvnJfJgrn/view?usp=drive_link">
+![각종URL의 형식](./Image/Image00.png)
 
 ### 2 브라우저는 먼저 URL을 해독한다
 브라우저가 처음 하는 일은 웹 서버에 보내는 리퀘스트의 메시지를 작성하기 위해  URL을 해독하는 것이다.
