--- a/daepan/1주차.md
+++ b/daepan/1주차.md
@@ -212,7 +212,7 @@ Hyper Text Transfer Protocol의 약어
     - 클라이언트의 요청에 잘못된 문법등으로 서버가 요청을 수행할 수 없음
     - 오류의 원인이 클라이언트에 있음
     - 클라이언트가 이미 잘못된 요청 데이터를 보내고 있기 때문에 똑같은 재시도가 실패함
-        - 400 Bad Request (백엔드 개발자가 제대로 처리를 해야 한다)
+        - 400 Bad Request (백엔드와 프엔 개발자가 제대로 처리를 해야 한다)
             - 요청구문 메시지 오류
         - 401 Unauthorized
             - 인증되지 않음
@@ -228,7 +228,7 @@ Hyper Text Transfer Protocol의 약어
             - 서버 내부 문제로 오류발생
         - 503 Service Unavailable
             - 서버가 일시적인 과부하 또는 예정된 작업으로 잠시 요청을 처리할 수 없음
-            - Retry-After헤더 필드로 얼마뒤에 복구되는지 보낼 수 도 있
+            - Retry-After헤더 필드로 얼마뒤에 복구되는지 보낼 수도 있다.
 
 <br>
 
