피드백 반영

--- a/weweweme/1주차.md
+++ b/weweweme/1주차.md
@@ -1,7 +1,7 @@
 # Chapter 1 : 웹 브라우저가 메시지를 만든다 - 웹 브라우저의 내부 탐험
 
 ## 1.1. HTTP(HyperText Transfer Protocol) 리퀘스트 메시지를 작성한다
-- HTTP란 웹 서버에 엑세스할 떄 사용하는 프로토콜이다.
+- HTTP란 웹 서버와 클라이언트간의 통신에 사용되는 프로토콜이다.
 - 사용자가 URL을 브라우저에 입력할 떄, URL을 해독하는 것 부터 브라우저의 동작은 시작된다.
 - URL은 의미에 따라 리퀘스트 메시지를 만들고, 웹서버에 자신이 원하는 동작을 전달한다.
 
@@ -16,7 +16,7 @@
 
 #### URL(Uniform Resource Locator)
 - 인터넷 상의 리소스를 고유하게 식별하고 위치를 지정하는 문자열이다.
-- 일반적인 URL의 구조는 다음과 같다. [scheme]://[hsot]:[port]/[path]?[query]
+- 일반적인 URL의 구조는 다음과 같다. [scheme]://[host]:[port]/[path]?[query]
   - scheme : 리소스에 어떻게 접근할 것인지를 나타내며, 대표적으로 http, https, ftp, mailto 등이 있다.
   - host : 리소스가 위치한 인터넷 상의 컴퓨터를 나타낸다. 주로 도메인 이름이나 IP 주소로 표현된다.
   - port : 네트워크 서비스에 접근하기 위한 포트 번호. 지정되지 않는다면 프로토콜의 기본 포트번호가 사용되는데, 대표적으로 http의 기본 포트는 80, https의 기본 포트는 443이다.
@@ -72,8 +72,8 @@
 
 - 서버는 메시지를 판단한 후 요구에 따라 동작하고, 결과 데이터를 응답 메시지에 저장한다.
 - 응답 메시지의 맨 앞 부분에는 실행 결과를 나타내는 status code가 있다.
-  - 웹 서버에 엑세스 했을 때 '404 Not Found'와 같이 표시될 수 있는데, 이것이 status code이다.
-
+  - 웹 서버에 엑세스 했을 때 '404 Not Found'와 같이 표시될 수 있는데, 404가 status code이며 Not Found는 상태 문구라 칭한다.
+  
 ### 1.1.5. HTTP 리퀘스트 메시지를 만든다
 - URL을 해독하고 웹 서버와 파일명을 판단하면 브라우저는 이것을 바탕으로 HTTP 리퀘스트 메시지를 생성한다.
 
@@ -251,7 +251,7 @@
 
 ### 1.2.5. 리졸버 내부의 작동
 1. 1.2.4. 의 과정을 거치면, 호출된 리졸버에게 실행 흐름이 넘어간다.
-2. 리졸버에 제어가 넘어가면 DNS 서버에 문의하기 위한 메시지를 만든다.
+2. 리졸버에 제어가 넘어가면 DNS 서버에 문의하기 위한 메시지를 만든다.프로토콜 스택(protocol stack)은 네트워크 통신을 가능하게 하는 여러 프로토콜의 집합입니다. 
   - 브라우저가 웹 서버에 보내는 HTTP의 리퀘스트 메시지를 만드는 것과 유사하다.
   - 하지만 HTTP는 메시지를 문자로 쓰지만, DNS의 메시지는 바이너리 데이터로 표현된다.
 3. 메시지의 송신은 리졸버가 아니라 운영체제 내부에 포함된 프로토콜 스택을 호출하여 실행을 의뢰한다.
