--- a/JunghyeonShin/2주차.md
+++ b/JunghyeonShin/2주차.md
@@ -1,43 +1,38 @@
 # 01 웹 브라우저가 메시지를 만든다
 ## 3. 전 세계의 DNS 서버가 연대한다
-### 1 DNS 서버의 기본 동작
-- DNS 서버의 기본 동작
-	- 클라이언트에서 조회 메시지를 DNS 서버에 전달
-		- 조회 메시지에는 세 가지 정보가 포함
-			- 이름 : 서버나 메일 배송 목적지와 같은 이름
-			- 클래스 : 인터넷을 나타내는 'IN'
-			- 타입 : 이름에 어떤 타입의 정보가 지원되는지를 나타냄, 타입에 따라 클라이언트에 회답하는 정보의 내용이 달라짐
-				- A(Address)이면 이름에 IP 주소가 지원
-				- MX(Mail eXchange)이면 이름에 메일 배송 목적지가 지원
-	- DNS 서버는 조회 메시지를 통해 등록된 정보를 찾음
-	- 조회의 내용에 응답하는 형태로 정보를 회답
-- 이 밖에도 여러 타입이 존재
-	- PTR 타입 : IP 주소에서 이름을 조사
-	- CNAME 타입 : 이름에 닉네임을 붙임
-	- NS 타입 : DNS 서버의 IP 주소를 등록
-	- SOA 타입 : 도메인 자체의 속성 정보를 등록
+DNS(Domain Name System)는 도메인명을 IP 주소로 변환해주는 시스템이다. DNS 서버는 DNS를 통해 어떤 서버에 연결할 것인지를 제어한다.
+<br>그럼 DNS 서버의 기본 동작에 대해 알아보자.
 
-### 2 도메인의 계층
-- DNS 서버에 정보가 등록되어 있지 않는 경우의 동작
-	- 결론 : 정보를 분산시켜서 다수의 DNS 서버에 등록하고, 다수의 DNS 서버가 연대하여 어디에 정보가 등록되어 있는지를 찾아내는 구조
+DNS 서버의 기본 동작은 클라이언트에서 조회 메시지를 받는다. 이때 조회 메시지에는 '이름', '클래스', '타입' 이라는 세 가지 정보가 포함되어있다.
+	- 이름은 서버나 메일 배송 목적지와 같은 이름이다.
+	- 클래스는 항상 인터넷을 나타내는 'IN' 값이다.
+	- 타입은 어떤 타입(종류)의 정보가 지원되는지를 나타낸다. 타입에 따라 클라이언트에 회답하는 정보의 내용이 달라진다.
+		- A(Address) 타입 : 이름에 IP 주소가 지원
+		- MX(Mail eXchange) 타입 : 이름에 메일 배송 목적지가 지원
+		- PTR(Pointer) 타입 : IP 주소에서 이름을 조사
+		- CNAME(Canonical Name) 타입 : 이름에 닉네임을 붙임
+		- NS(Name Server) 타입 : DNS 서버의 IP 주소를 등록
+		- SOA(Sender Policy Framework) 타입 : 도메인 자체의 속성 정보를 등록
+DNS 서버는 이 조회 메시지를 통해 등록된 정보를 찾아 응답하는 형태로 정보를 회답한다.
+
+![DNS 서버의 기본 동작](./Image/Image05.png)
+
+1대의 DNS 서버에 수많은 인터넷의 IP 주소를 등록하는 것은 불가능하다. 그래서 DNS 서버는 정보를 분산시켜서 다수의 DNS 서버에 등록하고, 다수의 DNS 서버가 연대하여 어디에 정보가 등록되어 있는지를 찾아내는 구조를 가진다.
+DNS 서버에 등록한 정보에는 모든 도메인명이라는 계층적 구조를 가진 이름이 붙여져 있다.
 	- www.cyber.co.kr 도메인
 		- kr : 최상위 도메인으로, 대한민국에 할당된 도메인
 		- co : kr의 서브 도메인으로, 국내의 도메인을 분류하기 위해 설치된 도메인
 		- cyber : co의 서브 도메인으로, 회사에 할당된 도메인
 		- www : 최하위 도메인으로, 서버의 이름
+이렇게 계층화된 도메인의 정보를 서버에 등록하고 아래와 같은 방법으로 등록한 정보를 찾아낸다.
+	1. 하위의 도메인을 담당하는 DNS 서버의 IP 주소를 그 상위의 DNS 서버에 등록
+	2. 루트 도메인(.)에서 차례로 아래쪽으로 거슬러 내려가며 찾음
+	3. 루트 도메인의 DNS 서버를 인터넷에 존재하는 DNS 서버에 전부 등록
 
-### 3 담당 DNS 서버를 찾아 IP 주소를 가져온다
-- DNS 서버에 등록한 정보를 찾아내는 방법
-	- 하위의 도메인을 담당하는 DNS 서버의 IP 주소를 그 상위의 DNS 서버에 등록
-	- 루트 도메인(.)에서 차례로 아래쪽으로 거슬러 내려가며 찾음
-	- 루트 도메인의 DNS 서버를 인터넷에 존재하는 DNS 서버에 전부 등록
+![DNS 서버들의 조회 동작](./Image/Image06.png)
 
-### 4 DNS 서버는 캐시 기능으로 빠르게 회답할 수 있다
-- DNS 서버는 한 번 조사한 이름을 캐시에 기록
-- 조회한 이름이 도메인에 등록되어 있지 않은 경우에도 이름이 존재하지 않는다는 회답을 개시에 보존
-- 캐시에 정보를 등록한 이후 등록 정보가 변경되는 경우, 캐시 안에 저장된 정보는 올바르다고 단언할 수 없음
-	- DNS 서버에 등록하는 정보에는 유효 기한을 설정하고, 캐시에 저장한 데이터의 유효 기간이 지나면 캐시에서 삭제
-	- 조회에 회답할 때 정보가 캐시에 저장된 것인지, 아니면 등록처 DNS 서버에서 회답한 것인지 알려줌
+또한 DNS 서버는 한 번 조사한 이름을 캐시에 기록하여 사용한다. 이런 캐싱에 대해 문제점이 있다. 바로 캐시에 정보를 등록한 이후 등록 정보가 변경되는 경우, 캐시 안에 저장된 정보는 올바르다고 단언할 수 없다는 점이다.
+따라서 DNS 서버는 등록하는 정보에 유효 기한을 설정하고, 캐시에 저장한 데이터의 유효 기간이 지나면 캐시에서 삭제한다. 또한 조회에 회답할 때 정보가 캐시에 저장된 것인지, 아니면 등록처 DNS 서버에서 회답한 것인지 알려준다.
 
 ------------
 ## 4. 프로토콜 스택에 메시지 송신을 의뢰한다
