TCP 연결과 해제 HTTPS

--- a/daepan/2주차.md
+++ b/daepan/2주차.md
@@ -98,14 +98,63 @@ read로 수신동작을 의뢰했을때 read는 수신한 데이터를 건네주
 </br> 
 </br> 
 
-## 스택을 통한 HTTP 통신
+## TCP 연결 절차: 3-way handshake
+3-way handshake는 TCP 연결을 시작할 때 연결 설정 과정을 설명하는 명칭이다.
+3번의 절차를 진행하는데 SYN, SYN-ACK, ACK가 진행된다.
 
-## 연결 3shakehand
+3-way handshake의 순서
 
-## 해제 4shakehand
+1. SYN: 클라이언트가 서버로 SYN(Synchronize) 패킷을 전송합니다. 이 패킷은 클라이언트가 연결을 시작하고자 함을 알리며, 클라이언트의 초기 시퀀스 번호를 포함하고 있습니다.
+
+2. SYN-ACK: 서버가 클라이언트로부터의 SYN 패킷을 받으면, SYN과 ACK(Acknowledgment) 플래그가 설정된 패킷을 클라이언트에게 보냅니다. 이 패킷은 서버의 초기 시퀀스 번호와 클라이언트의 SYN 패킷에 대한 응답을 포함하고 있습니다.
+
+3. ACK: 클라이언트가 서버로부터 SYN-ACK 패킷을 받으면, ACK 패킷을 서버에게 보냅니다. 이 ACK 패킷은 서버의 SYN-ACK 패킷에 대한 응답을 나타냅니다.
+
+이 3-way handshake를 통해 클라이언트와 서버간의 TCP 연결이 완료되었음을 증명하며, 양쪽의 데이터 전송이 시작될 수 있는 상태가 됩니다.
+
+## TCP 해제 절차: 4-way handshake
+4-way handshake는 TCP 연결을 해제할 때 해제 과정을 설명하는 명칭이다.
+4번의 절차가 진행되는데 FIN, ACK, FIN, ACK 4번의 절차가 진행된다.
+
+4-way handshake의 순서
+
+1. FIN: 클라이언트(또는 서버)는 연결을 종료하고자 할 때 FIN(Finish) 플래그가 설정된 패킷을 상대방에게 전송합니다. 이는 "더 이상 전송할 데이터가 없으므로 연결을 종료하고자 함"을 의미합니다.
+
+2. ACK: 상대방(이 예제에서는 서버)은 FIN 패킷을 받았다는 것을 확인하기 위해 ACK(Acknowledgment) 플래그가 설정된 패킷을 보냅니다. 이 패킷은 FIN 패킷에 대한 응답으로, "FIN 패킷을 받았습니다"를 의미합니다.
+
+3. FIN: 이제 서버(또는 클라이언트)는 자신의 데이터 전송이 모두 완료되었음을 알리기 위해 FIN 플래그가 설정된 패킷을 클라이언트에게 전송합니다.
+
+4. ACK: 클라이언트는 서버의 FIN 패킷을 받았다는 것을 확인하기 위해 ACK 패킷을 서버에게 보냅니다. 이 패킷은 서버의 FIN 패킷에 대한 응답으로, "서버의 FIN 패킷을 받았습니다"를 의미합니다.
+
+이 4-way handshake를 통해 클라이언트와 서버간의 TCP 연결이 안전하게 종료되는 것을 보장하며 
+양쪽 모두가 데이터 전송이 완료되었음과 연결이 종료되었음을 알 수 있게 해준다.
 
 ## 번외 HTTPS
+HTTPS는 HTTP에 **SSL 또는 TLS 프로토콜을 사용하여 통신 내용을 암호화하는 통신 규약**이다.
+
+> 위의 SSL과 TLS는 명확하게 다른 것이다.
+> * SSL은 웹 브라우저와 서버간의 암호화된 통신을 제공하기 위해 만들어진 최초의 프로토콜이다.
+> * TLS는 SSL의 직접적인 후속 버전으로 보안 개선 및 프로토콜의 표준화를 목적으로 개선된 프로토콜이다.
+
+위에서의 TCP 연결과정에서 3way-handshake 이후에 SSL/TLS Handshake를 추가한 것이 HTTPS라고 한다. </br>
+</br>
+
+* SSL/TLS HandShake란? 
+
+  - 이 과정은 보안 연결을 설정하기 위해 필요하며, 클라이언트와 서버 사이에서 서로의 신원을 확인하고 암호화 방법을 협상하는 단계이다.
+  - 이를 통하 중간자 공격이나 데이터 변조 등의 위협에서 안전할 수 있다.
+</br>
+
+1. 사용자가 웹 브라우저에 HTTPS URL을 입력하면, 웹 브라우저는 서버에 SSL 또는 TLS 연결을 요청합니다.
+2. 서버는 브라우저에 공개 키가 포함된 인증서를 전송합니다.
+3. 웹 브라우저는 이 인증서의 유효성을 확인합니다. 유효하다면, 브라우저는 서버의 공개 키를 사용하여 임시의 세션 키를 암호화하여 서버에 전송합니다.
+4. 서버는 자신의 개인 키를 사용하여 세션 키를 복호화합니다. 이제 서버와 클라이언트는 동일한 세션 키를 가지게 되어, 암호화된 데이터 교환을 시작합니다.
+
+여기서 보안키와 관련된 내용이 많은데, 대칭키 암호화, 비대칭 키 암호화 같은 정보들을 내포하고 있다.
+이에 대한 추가적인 조사는 다음주차에 추가적으로 조사하기...
 
 ## 퀴즈
+
+
 
 ## 리졸버의 개념, ARP와 관련된 내용 햑습
