--- a/daepan/2주차.md
+++ b/daepan/2주차.md
@@ -155,6 +155,26 @@ HTTPS는 HTTP에 **SSL 또는 TLS 프로토콜을 사용하여 통신 내용을 
 
 ## 퀴즈
 
+1. https://www.cyber.co.kr은 무엇을 나타냅니까?
+  * www.cyber.co.kr 서버에 https 프로토콜을 통해 데이터를 불러온다는 내용을 담고 있다.
+  * 이는 URL이라고 하며, 웹 상의 데이터들의 위치를 특정할 수 있는 정형화된 문자열이라는 뜻을 갖고 있다.
+
+2. 다음 URL의 차이는?
+> http://www.cyber.co.kr/sample </br>
+> http://www.cyber.co.kr/sample/
+
+  * 첫 번째 문자열은 www.cyber.co.kr 웹 서버에서의 sample이라는 파일을 불러올 것이고
+  * 두 번째 문자열은 www.cyber.co.kr 웹 서버에서의 sample 폴더에서의 index.html 혹은
+default.html을 불러올 것이다.
+
+3. 인터넷에 접속한 PC나 서버를 식별하기 위해 이용하는 주소는 무엇이라고 하나요?
+  *  IP 주소
+
+4. 웹 서버의 이름을 IP 주소를 조사하기 위해 사용하는 서버를 무엇이라고 하나요?
+  * DNS 서버
+
+5. DNS 서버에서 조회메시지를 보내는 프로그램을 무엇이라고 하는가?
+  * DNS 리졸버
 
 
 ## 리졸버의 개념, ARP와 관련된 내용 햑습
