--- a/daepan/2주차.md
+++ b/daepan/2주차.md
@@ -98,14 +98,110 @@ read로 수신동작을 의뢰했을때 read는 수신한 데이터를 건네주
 </br> 
 </br> 
 
-## 스택을 통한 HTTP 통신
+## TCP 연결 절차: 3-way handshake
+3-way handshake는 TCP 연결을 시작할 때 연결 설정 과정을 설명하는 명칭이다.
+3번의 절차를 진행하는데 SYN, SYN-ACK, ACK가 진행된다.
 
-## 연결 3shakehand
+### 3-way handshake의 순서
 
-## 해제 4shakehand
+1. SYN: 클라이언트가 서버로 SYN(Synchronize) 패킷을 전송합니다. 이 패킷은 클라이언트가 연결을 시작하고자 함을 알리며, 클라이언트의 초기 시퀀스 번호를 포함하고 있습니다.
+
+2. SYN-ACK: 서버가 클라이언트로부터의 SYN 패킷을 받으면, SYN과 ACK(Acknowledgment) 플래그가 설정된 패킷을 클라이언트에게 보냅니다. 이 패킷은 서버의 초기 시퀀스 번호와 클라이언트의 SYN 패킷에 대한 응답을 포함하고 있습니다.
+
+3. ACK: 클라이언트가 서버로부터 SYN-ACK 패킷을 받으면, ACK 패킷을 서버에게 보냅니다. 이 ACK 패킷은 서버의 SYN-ACK 패킷에 대한 응답을 나타냅니다.
+
+이 3-way handshake를 통해 클라이언트와 서버간의 TCP 연결이 완료되었음을 증명하며, 양쪽의 데이터 전송이 시작될 수 있는 상태가 됩니다.
+
+## TCP 해제 절차: 4-way handshake
+4-way handshake는 TCP 연결을 해제할 때 해제 과정을 설명하는 명칭이다.
+4번의 절차가 진행되는데 FIN, ACK, FIN, ACK 4번의 절차가 진행된다.
+</br>
+
+### 4-way handshake의 순서
+
+1. FIN: 클라이언트(또는 서버)는 연결을 종료하고자 할 때 FIN(Finish) 플래그가 설정된 패킷을 상대방에게 전송합니다. 이는 "더 이상 전송할 데이터가 없으므로 연결을 종료하고자 함"을 의미합니다.
+
+2. ACK: 상대방(이 예제에서는 서버)은 FIN 패킷을 받았다는 것을 확인하기 위해 ACK(Acknowledgment) 플래그가 설정된 패킷을 보냅니다. 이 패킷은 FIN 패킷에 대한 응답으로, "FIN 패킷을 받았습니다"를 의미합니다.
+
+3. FIN: 이제 서버(또는 클라이언트)는 자신의 데이터 전송이 모두 완료되었음을 알리기 위해 FIN 플래그가 설정된 패킷을 클라이언트에게 전송합니다.
+
+4. ACK: 클라이언트는 서버의 FIN 패킷을 받았다는 것을 확인하기 위해 ACK 패킷을 서버에게 보냅니다. 이 패킷은 서버의 FIN 패킷에 대한 응답으로, "서버의 FIN 패킷을 받았습니다"를 의미합니다.
+</br>
+
+이 4-way handshake를 통해 클라이언트와 서버간의 TCP 연결이 안전하게 종료되는 것을 보장하며 
+양쪽 모두가 데이터 전송이 완료되었음과 연결이 종료되었음을 알 수 있게 해준다.
 
 ## 번외 HTTPS
+HTTPS는 HTTP에 **SSL 또는 TLS 프로토콜을 사용하여 통신 내용을 암호화하는 통신 규약**이다.
+</br>
+
+> 위의 SSL과 TLS는 명확하게 다른 것이다.
+> * SSL은 웹 브라우저와 서버간의 암호화된 통신을 제공하기 위해 만들어진 최초의 프로토콜이다.
+> * TLS는 SSL의 직접적인 후속 버전으로 보안 개선 및 프로토콜의 표준화를 목적으로 개선된 프로토콜이다.
+</br>
+
+위에서의 TCP 연결과정에서 3way-handshake 이후에 SSL/TLS Handshake를 추가한 것이 HTTPS라고 한다. </br>
+</br>
+
+* SSL/TLS HandShake란? 
+
+  - 이 과정은 보안 연결을 설정하기 위해 필요하며, 클라이언트와 서버 사이에서 서로의 신원을 확인하고 암호화 방법을 협상하는 단계이다.
+  - 이를 통하 중간자 공격이나 데이터 변조 등의 위협에서 안전할 수 있다.
+</br>
+
+1. 사용자가 웹 브라우저에 HTTPS URL을 입력하면, 웹 브라우저는 서버에 SSL 또는 TLS 연결을 요청합니다.
+2. 서버는 브라우저에 공개 키가 포함된 인증서를 전송합니다.
+3. 웹 브라우저는 이 인증서의 유효성을 확인합니다. 유효하다면, 브라우저는 서버의 공개 키를 사용하여 임시의 세션 키를 암호화하여 서버에 전송합니다.
+4. 서버는 자신의 개인 키를 사용하여 세션 키를 복호화합니다. 이제 서버와 클라이언트는 동일한 세션 키를 가지게 되어, 암호화된 데이터 교환을 시작합니다.
+</br>
+
+여기서 보안키와 관련된 내용이 많은데, 대칭키 암호화, 비대칭 키 암호화 같은 정보들을 내포하고 있다.
+이에 대한 추가적인 조사는 다음주차에 추가적으로 조사하기...
 
 ## 퀴즈
 
-## 리졸버의 개념, ARP와 관련된 내용 햑습
+1. https://www.cyber.co.kr은 무엇을 나타냅니까?
+  * www.cyber.co.kr 서버에 https 프로토콜을 통해 데이터를 불러온다는 내용을 담고 있다.
+  * 이는 URL이라고 하며, 웹 상의 데이터들의 위치를 특정할 수 있는 정형화된 문자열이라는 뜻을 갖고 있다.
+</br>
+
+2. 다음 URL의 차이는?
+> 1. http://www.cyber.co.kr/sample </br>
+> 2. http://www.cyber.co.kr/sample/
+
+  * 첫 번째 문자열은 www.cyber.co.kr 웹 서버에서의 sample이라는 파일을 불러올 것이고
+  * 두 번째 문자열은 www.cyber.co.kr 웹 서버에서의 sample 폴더에서의 index.html 혹은
+default.html을 불러올 것이다.
+</br>
+
+3. 인터넷에 접속한 PC나 서버를 식별하기 위해 이용하는 주소는 무엇이라고 하나요?
+  *  IP 주소
+</br>
+
+4. 웹 서버의 이름을 IP 주소를 조사하기 위해 사용하는 서버를 무엇이라고 하나요?
+  * DNS 서버
+</br>
+
+5. DNS 서버에서 조회메시지를 보내는 프로그램을 무엇이라고 하는가?
+  * DNS 리졸버
+</br>
+
+## 리졸버의 개념, ARP와 DNS의 차이
+</br>
+
+책에서의 대화 내용을 보면 ARP와 DNS 서버의 통신 방식과 결과 값을 받아내는 것이 크게 다르지 않은데
+어째서 리졸버라는 개념이 DNS에서만 존재하는 것인가에 대한 내용으로 해석하였다.
+</br></br>
+
+먼저 ARP와 DNS 서버동작에 대한 내용을 비교해보면
+  * ARP는 IP주소를 해당 네트워크 장치의 MAC 주소로 변환
+  * DNS는 도메인이름을 IP주소로 변환
+</br></br>
+
+이렇게 보면 비슷해보이지만 동작방식을 보면 이것이 다르다는 것을 알 수 있습니다. </br>
+DNS는 여러 DNS 서버를 거치면서 정보를 조회하는 재귀적 조회가 이루어져 질의 시작점 </br>
+즉, 조회 메시지를 생성하는 리졸버가 필수적으로 요구됩니다.
+</br></br>
+
+하지만 ARP의 경우에는 단순한 브로드캐스트 메시지를 통해 모든 장치에 이 IP 주소를 가진 장치의 </br> 
+MAC주소를 물어보게 되어 해당 IP를 가지고 있는 장치의 응답을 받는 방식으로 동작합니다. </br>
