--- a/daepan/2주차.md
+++ b/daepan/2주차.md
@@ -16,43 +16,58 @@
 * 세번째로는 타입, 이름에 어떤 타입의 정보가 지원되는지를 의미한다. 예를 들어 A인 경우에는 IP 주소가 지원되는 것, MX는 메일 배송 목적지를 지원한다고 할 수 있다.
 * 이 타입에 따라 응답값이 결정됩니다.
 
+</br></br>
 
-*요청*: 사용자가 웹 브라우저에 도메인 이름을 입력하면, 먼저 사용자의 컴퓨터에 저장된 로컬 DNS 캐시를 확인하여 해당 도메인의 IP 주소가 있는지 확인합니다. </br>
+* **요청** : 사용자가 웹 브라우저에 도메인 이름을 입력하면, 먼저 사용자의 컴퓨터에 저장된 로컬 DNS 캐시를 확인하여 해당 도메인의 IP 주소가 있는지 확인합니다. </br>
 
-*재귀적 조회*: 로컬 캐시에 정보가 없으면, 설정된 DNS 서버(주로 인터넷 서비스 제공자(ISP)에서 제공)에게 요청을 보냅니다. 이 DNS 서버는 필요한 정보를 가지고 있지 않으면 다른 DNS 서버에 조회를 요청하는 재귀적인 과정을 거칩니다. </br>
+* **재귀적 조회** : 로컬 캐시에 정보가 없으면, 설정된 DNS 서버(주로 인터넷 서비스 제공자(ISP)에서 제공)에게 요청을 보냅니다. 이 DNS 서버는 필요한 정보를 가지고 있지 않으면 다른 DNS 서버에 조회를 요청하는 재귀적인 과정을 거칩니다. </br>
 
-*루트 서버*: DNS 서버는 루트 서버부터 시작하여 TLD(Top-Level Domain) 서버, 그리고 마지막으로 도메인의 권한 있는 이름 서버에 요청을 보내 IP 주소 정보를 얻습니다. </br>
+* **루트 서버**: DNS 서버는 루트 서버부터 시작하여 TLD(Top-Level Domain) 서버, 그리고 마지막으로 도메인의 권한 있는 이름 서버에 요청을 보내 IP 주소 정보를 얻습니다. </br>
 
-*응답*: 권한 있는 이름 서버에서 해당 도메인의 IP 주소를 찾게 되면, 이 정보는 처음 요청을 시작한 DNS 서버로 전달되고, 그 후 사용자의 컴퓨터로 반환됩니다. </br>
+* **응답**: 권한 있는 이름 서버에서 해당 도메인의 IP 주소를 찾게 되면, 이 정보는 처음 요청을 시작한 DNS 서버로 전달되고, 그 후 사용자의 컴퓨터로 반환됩니다. </br>
 
-*캐싱*: IP 주소가 확인되면, 이 정보는 일정 시간 동안 로컬 DNS 캐시에 저장됩니다. 이는 같은 요청이 반복될 때 빠른 응답을 가능하게 합니다. </br>
+* **캐싱**: IP 주소가 확인되면, 이 정보는 일정 시간 동안 로컬 DNS 캐시에 저장됩니다. 이는 같은 요청이 반복될 때 빠른 응답을 가능하게 합니다. </br>
 
 ## 도메인 계층 포함된 설명
+
 * 도메인의 계층 구조:
   * *루트 도메인 (*.*)*: DNS 계층의 최상위에 있습니다. 모든 도메인 이름의 맨 끝에 암묵적으로 있는 점(.)으로 생각할 수 있습니다.  </br>
+
   * *TLD (Top-Level Domain)*: .com, .net, .org, .gov, .country-code 등의 도메인들입니다. 각 국가에는 자신만의 TLD가 있습니다 (예: .us, .uk, .kr 등). </br>
+
   * *SLD (Second-Level Domain)*: 이는 사용자가 등록하는 도메인 이름의 부분입니다. 예를 들면, google in http://www.google.com. </br>
+
   * *서브 도메인 (Subdomain)*: SLD 앞의 부분입니다. 예를 들면, www in http://www.google.com. </br>
 
 ### DNS 동작 방식 (도메인 계층 관점에서):
 * *사용자 요청*: 사용자가 웹 브라우저에 http://www.example.xn--com-of0o 입력하면, DNS 조회가 시작됩니다.  </br>
+
 * *루트 서버 조회*: 처음에는 루트 DNS 서버가 조회됩니다. 루트 서버는 TLD 서버의 주소를 알려줍니다. </br>
+
 * *TLD 서버 조회*: 루트 서버에 의해 제공된 정보를 바탕으로, TLD 서버 (.com 서버 in our example)가 조회됩니다. TLD 서버는 해당 도메인의 권한 있는 (authoritative) 서버의 주소를 알려줍니다. </br>
+
 * *권한 있는 DNS 서버 조회*: TLD 서버에 의해 제공된 정보를 사용하여, example.com에 대한 권한 있는 DNS 서버가 조회됩니다. 이 서버는 http://www.example.xn--com-yh0o IP 주소를 알려줍니다. </br>
+
 * *응답*: 권한 있는 서버의 IP 주소 정보가 사용자의 컴퓨터나 로컬 DNS 서버로 반환됩니다.  </br>
 
 ## DNS의 동작 방식이 빠른 이유는?
 * *캐싱 (Caching)*:
-DNS 조회 결과는 일정 시간 동안 캐시됩니다. 따라서 한 번 조회된 도메인 이름의 IP 주소 정보는 재조회 없이 캐시에서 빠르게 가져올 수 있습니다.
-로컬 컴퓨터, 라우터, ISP의 DNS 서버 등 여러 위치에 캐싱이 일어납니다.
-이 캐싱 메커니즘 덕분에 대부분의 DNS 조회는 실제로 전 세계적인 DNS 시스템을 통해 진행되지 않아도 됩니다.
+  * DNS 조회 결과는 일정 시간 동안 캐시됩니다. 
+  * 따라서 한 번 조회된 도메인 이름의 IP 주소 정보는 재조회 없이 캐시에서 빠르게 가져올 수 있습니다.
+  * 로컬 컴퓨터, 라우터, ISP의 DNS 서버 등 여러 위치에 캐싱이 일어납니다.
+  * 이 캐싱 메커니즘 덕분에 대부분의 DNS 조회는 실제로 전 세계적인 DNS 시스템을 통해 진행되지 않아도 됩니다.
+</br>
+
 * *분산된 서버 구조*:
-DNS는 계층적이고 분산된 구조를 가지고 있습니다. 전 세계에 수천 개의 DNS 서버가 위치해 있으며, 각 서버는 특정 부분의 DNS 네임스페이스를 담당합니다.
-이 구조는 단일 지점에서의 실패나 병목 현상을 방지하고, 사용자 근처의 서버에서 빠르게 응답을 받을 수 있게 합니다.
+  * DNS는 계층적이고 분산된 구조를 가지고 있습니다. 전 세계에 수천 개의 DNS 서버가 위치해 있으며, 각 서버는 특정 부분의 DNS 네임스페이스를 담당합니다.
+  * 이 구조는 단일 지점에서의 실패나 병목 현상을 방지하고, 사용자 근처의 서버에서 빠르게 응답을 받을 수 있게 합니다.
+</br>
+
 * *부하 분산 (Load Balancing)*:
-큰 웹 서비스나 인터넷 서비스 제공자 (ISP)는 종종 여러 DNS 서버를 운용하여 요청에 대한 부하를 분산시킵니다. 이는 서비스의 안정성을 높이며, 응답 시간을 줄입니다.
-* *최적화 및 효율적인 알고리즘*:
-DNS 서버 소프트웨어는 연속적인 개선과 최적화를 거쳐왔습니다. 효율적인 알고리즘과 최적화된 코드 덕분에 DNS 조회는 매우 빠르게 처리됩니다.
+  * 큰 웹 서비스나 인터넷 서비스 제공자 (ISP)는 종종 여러 DNS 서버를 운용하여 요청에 대한 부하를 분산시킵니다. 
+  * 이를 통해 서비스의 안정성을 높이며, 응답 시간을 줄입니다.
+</br>
+
 * *Anycast*:
   * Anycast는 여러 서버가 동일한 IP 주소를 공유하는 방식입니다. 사용자의 DNS 요청은 가장 가까운, 혹은 가장 응답이 빠른 서버로 자동적으로 전달됩니다.
   * 이 기술을 사용하는 DNS 서비스 (예: Google Public DNS)는 전 세계 여러 지점에서 서비스를 제공하여, 지리적으로 떨어진 사용자에게도 빠른 응답을 보장합니다.
