--- a/daepan/2주차.md
+++ b/daepan/2주차.md
@@ -1,10 +1,10 @@
 # 2주차
 
 ## DNS가 무엇인지 설명해주세요
-* Domain Name System의 약자로, 인터넷에서 도메인 이름(Domain Name)을 IP 주소로 변환하거나 IP 주소를 도메인 이름으로 변환하는 서비스(System)이다.</br>
+* Domain Name System의 약자로, 인터넷에서 도메인 이름(Domain Name)을 IP 주소로 변환하거나 IP 주소를 도메인 이름으로 변환하는 서비스(System)있습니다.</br>
 * 인터넷 상의 모든 장치는 IP 주소를 사용하여 서로를 구별하고 통신합니다.
 하지만 사람들에게는 숫자로 이루어진 IP 주소보다는 *텍스트 기반의 도메인 이름*이 기억과 사용하기 편리하다는 이점이 있습니다.
-* DNS는  *도메인 이름과 IP 주소 간의 변환 역할을 담당*하여 인터넷 사용자가 텍스트 기반의 웹 주소를 사용할 수 있게 해줍니다.
+* DNS는  *도메인 이름과 IP 주소 간의 변환 역할을 담당*하여 인터넷 사용자가 텍스트 기반의 웹 주소를 사용할 수 있게 해주는 기능입니다.
 
 ## DNS 서버의 동작방식에 대해 설명해주세요
 * DNS 기본 동작 방식은 클라이언트에서 조회메시지를 받고 메시지의 내용을 응답하는 흐름을 가집니다.
@@ -13,7 +13,7 @@
 조회 메세지는 크게 3가지 정보가 담깁니다.
 * 첫 번쨰로는 이름, 서버나 메일 배송 목적지를 의미합니다.
 * 두 번째로는 클래스, 인터넷 외의 네트워크에서 사용하기 위해 존재했던 항목이지만, 현재는 인터넷 외에는 사용하지 않기에 IN이라는 값이 들어있습니다.
-* 세번째로는 타입, 이름에 어떤 타입의 정보가 지원되는지를 의미한다. 예를 들어 A인 경우에는 IP 주소가 지원되는 것, MX는 메일 배송 목적지를 지원한다고 할 수 있다.
+* 세번째로는 타입, 이름에 어떤 타입의 정보가 지원되는지를 의미한다. 예를 들어 A인 경우에는 IP 주소가 지원되는 것, MX는 메일 배송 목적지를 지원한다고 할 수 있습니다.
 * 이 타입에 따라 응답값이 결정됩니다.
 
 </br></br>
@@ -39,16 +39,6 @@
 
   * *서브 도메인 (Subdomain)*: SLD 앞의 부분입니다. 예를 들면, www in http://www.google.com. </br>
 
-### DNS 동작 방식 (도메인 계층 관점에서):
-* *사용자 요청*: 사용자가 웹 브라우저에 http://www.example.xn--com-of0o 입력하면, DNS 조회가 시작됩니다.  </br>
-
-* *루트 서버 조회*: 처음에는 루트 DNS 서버가 조회됩니다. 루트 서버는 TLD 서버의 주소를 알려줍니다. </br>
-
-* *TLD 서버 조회*: 루트 서버에 의해 제공된 정보를 바탕으로, TLD 서버 (.com 서버 in our example)가 조회됩니다. TLD 서버는 해당 도메인의 권한 있는 (authoritative) 서버의 주소를 알려줍니다. </br>
-
-* *권한 있는 DNS 서버 조회*: TLD 서버에 의해 제공된 정보를 사용하여, example.com에 대한 권한 있는 DNS 서버가 조회됩니다. 이 서버는 http://www.example.xn--com-yh0o IP 주소를 알려줍니다. </br>
-
-* *응답*: 권한 있는 서버의 IP 주소 정보가 사용자의 컴퓨터나 로컬 DNS 서버로 반환됩니다.  </br>
 
 ## DNS의 동작 방식이 빠른 이유는?
 * *캐싱 (Caching)*:
