--- a/daepan/2주차.md
+++ b/daepan/2주차.md
@@ -11,7 +11,7 @@
 
 ## 조회 메세지에는 어떤 정보가 담겨 있나요?
 조회 메세지는 크게 3가지 정보가 담깁니다.
-* 첫 번쨰로는 이름, 서버나 메일 배송 목적지를 의미합니다.
+* 첫 번째로는 이름, 서버나 메일 배송 목적지를 의미합니다.
 * 두 번째로는 클래스, 인터넷 외의 네트워크에서 사용하기 위해 존재했던 항목이지만, 현재는 인터넷 외에는 사용하지 않기에 IN이라는 값이 들어있습니다.
 * 세번째로는 타입, 이름에 어떤 타입의 정보가 지원되는지를 의미한다. 예를 들어 A인 경우에는 IP 주소가 지원되는 것, MX는 메일 배송 목적지를 지원한다고 할 수 있습니다.
 * 이 타입에 따라 응답값이 결정됩니다.
@@ -39,6 +39,16 @@
 
   * *서브 도메인 (Subdomain)*: SLD 앞의 부분입니다. 예를 들면, www in http://www.google.com. </br>
 
+### DNS 동작 방식 (도메인 계층 관점에서):
+* *사용자 요청*: 사용자가 웹 브라우저에 http://www.example.com 입력하면, DNS 조회가 시작됩니다.  </br>
+
+* *루트 서버 조회*: 처음에는 루트 DNS 서버가 조회됩니다. 루트 서버는 TLD 서버의 주소를 알려줍니다. </br>
+
+* *TLD 서버 조회*: 루트 서버에 의해 제공된 정보를 바탕으로, TLD 서버 (.com 서버)가 조회됩니다. TLD 서버는 해당 도메인의 권한 있는 서버의 주소를 알려줍니다. </br>
+
+* *권한 있는 DNS 서버 조회*: TLD 서버에 의해 제공된 정보를 사용하여, example.com에 대한 권한 있는 DNS 서버가 조회됩니다. 이 서버는 http://www.example.com IP 주소를 알려줍니다. </br>
+
+* *응답*: 권한 있는 서버의 IP 주소 정보가 사용자의 컴퓨터나 로컬 DNS 서버로 반환됩니다.  </br>
 
 ## DNS의 동작 방식이 빠른 이유는?
 * *캐싱 (Caching)*:
@@ -95,7 +105,7 @@ connect를 호출할 때 3가지 매개변수를 이용하는데,
 </br> 
 
 ### 연결 끊기 단계
-연결 끊기 단계에서는 송 수신 단계가 종료되며, 소켓 라이브러리의 close를 호출하여 진행됩다. </br> 
+연결 끊기 단계에서는 송 수신 단계가 종료되며, 소켓 라이브러리의 close를 호출하여 진행됩니다. </br> 
 이 때 해제 동작은 응답메세지 송신이 완료되면 웹 서버측에서 close를 호출하여 연결을 종료하며 </br> 
 클라리언트 측에 전달을 받게되어 클라이언트의 소켓은 연결 끊기 단계를 준비하게 되고 </br> 
 read로 수신동작을 의뢰했을때 read는 수신한 데이터를 건네주는 대신 송 수신 동작이 완료되어 연결이 </br>  끊겼다는 사실을 브라우저에게 알립니다. </br> 
@@ -151,7 +161,7 @@ HTTPS는 HTTP에 **SSL 또는 TLS 프로토콜을 사용하여 통신 내용을 
 * SSL/TLS HandShake란? 
 
   - 이 과정은 보안 연결을 설정하기 위해 필요하며, 클라이언트와 서버 사이에서 서로의 신원을 확인하고 암호화 방법을 협상하는 단계이다.
-  - 이를 통하 중간자 공격이나 데이터 변조 등의 위협에서 안전할 수 있다.
+  - 이를 통해 중간자 공격이나 데이터 변조 등의 위협에서 안전할 수 있다.
 </br>
 
 1. 사용자가 웹 브라우저에 HTTPS URL을 입력하면, 웹 브라우저는 서버에 SSL 또는 TLS 연결을 요청합니다.
