예시 띄어쓰기 추가

--- a/weweweme/3주차.md
+++ b/weweweme/3주차.md
@@ -145,6 +145,7 @@
   - 헤더 길이 필드는 실제 헤더의 길이를 4바이트 단위로 표현한다. 
   - 이 필드에 저장되는 숫자를 통해 해당 TCP 헤더가 몇 개의 4바이트 덩어리로 이루어져 있는지를 알 수 있다.
     > 만약 헤더 길이 필드의 값이 5라면, 5 (헤더 길이 필드 값) x 4 (하나의 덩어리 크기) = 20바이트 (실제 헤더의 길이)
+
     > 만약 헤더 길이 필드의 값이 15라면, 15 (헤더 길이 필드 값) x 4 (하나의 덩어리 크기) = 60바이트 (실제 헤더의 길이)
 - 플래그 비트 8개 : CWR, ECE, URG, ACK, PSH, RST, SYN, FIN
   - TCP 연결의 다양한 상태와 제어를 위한 플래그이다.
@@ -153,8 +154,11 @@
   - URG(Urgent Pointer) : 긴급한 데이터가 있다고 알리며, 이 플래그가 활성화되면 긴급 포인터 필드가 유효해진다.
     - 긴급한 데이터란 네트워크 통신 중에 특별히 빠르게 처리되어야 하는 데이터를 의미한다.
       > 실시간 멀티플레이어 게임에서, 중요한 게임 이벤트나 행동(게임 내 구매, 캐릭터의 중요한 동작 등)이 실행되어야 할 때 사용된다.
+
       > 보안 패치나 중요한 소프트웨어 업데이트를 즉시 적용해야 하는 상황에서 사용될 수 있다.
+
       > 온라인 경매에서 마지막 순간의 입찰 정보를 빠르게 처리해야 할 때 사용된다.
+
   - ACK(Acknowledgement) : 수신한 데이터를 정상적으로 받았다고 상대방에게 알린다. 이 플래그가 활성화되면, 확인응답 번호 필드는 다음에 수신하길 원하는 바이트의 순서 번호를 가진다.
   - PSH(Push Function) : 이 플래그가 활성화되면, 버퍼링 없이 패킷을 애플리케이션 레이어로 즉시 전달해야 함을 나타낸다.
     - 일반적으로 사용자가 데이터를 즉시 보내고 싶을 때나, 버퍼가 꽉 찼을 때 활성화된다.
@@ -189,9 +193,13 @@
 - 보안은 모든 프로토콜에서 중요한 주제이며, 통신 보안을 위한 암호화와 인증 정보가 여기에 속한다.
 - 대표적으로 SSL/TLS 암호화, OAuth 인증 등이 있다.
   - SSL/TLS 암호화 : Secure Socket Layer(SSL) 및 그 후속인 Transport Layer Security(TLS)는 데이터를 암호화하여 통신이 제3자에 의해 도청되거나 변경되지 않도록 한다.
-    > HTTPS 프로토콜은 HTTP에 SSL/TLS 암호화를 추가하여 보안을 강화한다. 웹 브라우저의 주소창에서 'https://' 로 시작하는 웹사이트는 SSL/TLS를 사용하고 있다.
+    > HTTPS 프로토콜은 HTTP에 SSL/TLS 암호화를 추가하여 보안을 강화한다. 
+
+    > 웹 브라우저의 주소창에서 'https://' 로 시작하는 웹사이트는 SSL/TLS를 사용하고 있다.
   - OAuth 인증: OAuth는 외부 서비스에서 리소스를 사용할 때 권한을 부여받는 표준 인증 방법 중 하나다. 이를 통해 사용자는 패스워드를 공유하지 않고도 특정 정보에 대한 접근을 허용할 수 있다.
-    > Google로 로그인 기능은 OAuth를 통해 이루어진다. 이를 사용하면 사용자는 구글 패스워드를 직접 입력하지 않아도 다른 앱 또는 서비스에 로그인할 수 있다.
+    > Google로 로그인 기능은 OAuth를 통해 이루어진다. 
+    
+    > 이를 사용하면 사용자는 구글 패스워드를 직접 입력하지 않아도 다른 앱 또는 서비스에 로그인할 수 있다.
 
 
 ### 2.2.3. 접속 동작의 실체
