--- a/JunghyeonShin/3주차.md
+++ b/JunghyeonShin/3주차.md
@@ -10,13 +10,11 @@
 
 ![TCP/IP 소프트웨어의 계층 구조](./Image/Image09.png)
 
-먼저 맨 위에 있는 것은 네트워크 애플리케이션으로 브라우저, 메일러, 웹 서버, 메일 서버 등의 프로그램 등이 있다.
-<br>데이터의 송·수신 등의 일을 의뢰하며 애플리케이션의 아랫부분에는 Socket 라이브러리와 리졸버가 있다.
+먼저 맨 위에 있는 것은 네트워크 애플리케이션으로 브라우저, 메일러, 웹 서버, 메일 서버 등의 프로그램 등이 있다. 데이터의 송·수신 등의 일을 의뢰하며 애플리케이션의 아랫부분에는 Socket 라이브러리와 리졸버가 있다.
 
-그 아래가 OS의 내부이며, 여기에 프로토콜 스택이 있다. TCP와 UDP 프로토콜을 사용하여 데이터 송·수신을 담당한다.
-<br>브라우저, 메일 등의 일반적인 애플리케이션에서 사용할 때는 TCP를 사용하고, DNS 서버에 대한 조회 등에서 짧은 제어용 데이터를 송·수신하는 경우 UDP를 사용한다.
-<br>그 아래에는 패킷 송·수신 동작을 제어하는 IP가 있다. 패킷이란 작은 덩어리로 분할된 데이터를 말하며, 이 패킷을 통신 상대까지 운반하는 것이 IP의 주 역할이다.
-<br>그리고 IP 내부에는 패킷을 운반할 때 발생하는 오류를 통지하거나 제어용 메시지를 통지하는 **ICMP** 프로토콜과 IP 주소에 대응하는 이더넷의 MAC 주소를 조사할 때 사용하는 **ARP** 프로토콜을 다룬다.
+그 아래가 OS의 내부이며, 여기에 프로토콜 스택이 있다. TCP와 UDP 프로토콜을 사용하여 데이터 송·수신을 담당한다. 브라우저, 메일 등의 일반적인 애플리케이션에서 사용할 때는 TCP를 사용하고, DNS 서버에 대한 조회 등에서 짧은 제어용 데이터를 송·수신하는 경우 UDP를 사용한다.
+
+그 아래에는 패킷 송·수신 동작을 제어하는 IP가 있다. 패킷이란 작은 덩어리로 분할된 데이터를 말하며, 이 패킷을 통신 상대까지 운반하는 것이 IP의 주 역할이다. 그리고 IP 내부에는 패킷을 운반할 때 발생하는 오류를 통지하거나 제어용 메시지를 통지하는 **ICMP**(Internet Control Message Protocol) 프로토콜과 IP 주소에 대응하는 이더넷의 MAC 주소를 조사할 때 사용하는 **ARP**(Address Resolution Protocol) 프로토콜을 다룬다.
 
 IP 아래에는 LAN 드라이버와 LAN 어뎁터가 있으며 LAN 드라이버는 LAN 어뎁터의 하드웨어를 제어하고 실제 송·수신 동작을 LAN 어뎁터가 실행한다.
 
