--- a/JunghyeonShin/3주차.md
+++ b/JunghyeonShin/3주차.md
@@ -126,3 +126,6 @@ ACK 번호는 수신측에서 데이터를 받았을 때 내용을 조사하여 
 클라이언트가 서버측에 FIN을 송신한 후 소켓을 말소해버리면 서버는 ACK 번호가 돌아오지 않아 다시 FIN을 송신한다. 이 시점에서 다른 애플리케이션이 소켓을 작성하면 새 소켓에 같은 포트 번호가 할당될 수 있고 같은 포트 번호의 소켓이 만들어진 상태에서 서버가 다시 보낸 FIN을 수신받게 되는 문제가 있다.
 <br>이러한 오동작을 막기 위해 잠시 기다린 후 소켓을 말소한다.
 
+------------
+### 참고자료
+- https://www.cyber.co.kr/book/item/7147
